removed fix height from blogpreview box and instead added padding and rowgap to make more mobile responsive while still ensuring boxes are the same height

--- a/src/index2.css
+++ b/src/index2.css
@@ -907,7 +907,7 @@ main {
 
 .blogPreview {
   font-family: "Crimson Pro", serif;
-  height: 45vh;
+  /* height: 50vh; */
   /* width: 100%; */
   /* width: 30%; */
   /* border-bottom: 1px solid #ccc; */
@@ -917,8 +917,9 @@ main {
   flex-direction: column;
   /* justify-content: flex-start; */
   align-items: center;
-  padding: 0px 0px;
-
+  /* padding-bottom: 10px; */
+  padding-bottom: 30px;
+  row-gap: 30px;
   box-shadow: 2px 2px 10px #02211f37;
   /* border: 2px solid red; */
   /* column-gap: 10px; */
